# simlady

./: .gitignore  README.Rmd  README.md  entry_points.cfg  setup.cfg
simlady/: __init__.py  gtf2fasta.py  parser.py  simlady.py  test_cigar.py
