[metadata]
name = simlady
version = attr: simlady.__version__
url = https://github.com/drres/simlady
author = Shinichi Namba
author_email = sinnhazime@gmail.com
license = MIT
description = simlady: a SIMulator for Long read transcriptome Analysis with RNA DecaY model. The Pacific Biosciences SMRT error model is implemented in SimLoRD.
long_description = file: README.md
classifiers=
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
install_requires =
    numpy >= 1.17
    pandas
    scipy
    toolz
    dask
    pysam >= 0.8.4
    pyfaidx
    dinopy
    gtfparse
    simlord == 1.0.3
zip_safe = False
include_package_data = False
packages = find:
entry_points = file: entry_points.cfg
